# sc-api

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
cmake/: dependencies.cmake
core/: CMakeLists.txt  sc-api-core.cmake
core/inc/sc-api/core/: action.h  api.h  api_core.h  command.h  compatibility.h  device.h  device_info.h  device_info_definitions.h  device_info_fwd.h  events.h  ffb.h  property_reference.h  result.h  session.h  session_fwd.h  sim_data.h  sim_data_builder.h  telemetry.h  telemetry_references.h  time.h  type.h  variable_references.h  variables.h  version.h
core/inc/sc-api/core/protocol/: actions.h  bson_shm_blocks.h  commands.h  core.h  security.h  telemetry.h  types.h  variable_types.h  variables.h
core/inc/sc-api/core/sim_data/: participant.h  session.h  sim.h  tire.h  track.h  vehicle.h
core/inc/sc-api/core/util/: bson_builder.h  bson_reader.h  event_queue.h
core/src/: action.cpp  api.cpp  api_core.cpp  api_internal.h  command.cpp  command_parsing.cpp  command_parsing.h  compatibility.cpp  compatibility.h  device.cpp  device_info.cpp  device_info_internal.h  events.cpp  ffb.cpp  init.cpp  security_impl.cpp  security_impl.h  session.cpp  shm_bson_data_provider.cpp  shm_bson_data_provider.h  sim_data.cpp  sim_data_builder.cpp  sim_data_internal.h  telemetry.cpp  telemetry_internal.h  time.cpp  type.cpp  variables.cpp  variables_internal.h
core/src/crypto/: .clang-tidy  aes.c  aes.h  ecdh.c  ecdh.h  gcm.c  gcm.h
core/src/libeddsa/: .clang-tidy  CMakeLists.txt
core/src/libeddsa/inc/libeddsa/: eddsa.h
core/src/libeddsa/src/: burn.h  ed.c  ed25519-sha512.c  fld.c  sc.c  sha512.c  x25519.c
core/src/libeddsa/test/: CMakeLists.txt  reference_x25519.c  reference_x25519.py  selftest-convert.c  selftest-ed25519.c  selftest-sha512.c  selftest-x25519.c  selftest-x25519_base.c
core/src/sim_data/: participant.cpp  session.cpp  sim.cpp  tire.cpp  track.cpp  vehicle.cpp
core/src/util/: bson_builder.cpp  bson_reader.cpp
docs/: Doxyfile.in  GettingStarted.md
docs/doxygen-awesome-css/: doxygen-awesome.css
docs/html/: header.html
examples/: CMakeLists.txt  effect_pipelines.cpp  game_loop.cpp  overview.cpp  pedal_state.cpp  variable_definitions.cpp
inc/sc-api/: api.h  device_info.h  events.h  ffb.h  session.h  sim_data.h  telemetry.h  time.h  variables.h
src/: api.cpp  events.cpp
